--- a/vignettes/intro.qmd
+++ b/vignettes/intro.qmd
@@ -9,7 +9,7 @@ toc: true
 toc-location: left
 toc-depth: 4
 toc-title: ''
-editor: visual
+editor: source
 vignette: >
   %\VignetteIndexEntry{intro}
   %\VignetteEngine{quarto::html}
@@ -42,33 +42,7 @@ library(ggplot2)
 
 ```{r}
 #| echo: false
-library(knitr) # for tables in this vignette
-#options(mc.cores = 1L) # for CRAN submission
 theme_bw() |> theme_set()
-```
-
-## Terms and Abbreviations
-
-```{r}
-#| echo: false
-#| results: asis
-c(
-  '[|>](https://search.r-project.org/R/refmans/base/html/pipeOp.html)', 'Forward pipe operator introduced in `R` 4.1.0', 
-  '`$`', '[Extract](https://search.r-project.org/R/refmans/base/html/Extract.html) parts of an object',
-  '[`aggregate`](https://search.r-project.org/R/refmans/stats/html/aggregate.html)', 'Aggregated statistics', 
-  '`CRAN`, `R`', '[The Comprehensive R Archive Network](https://cran.r-project.org)',
-  '[`class`](https://search.r-project.org/R/refmans/base/html/class.html)', 'Object class',
-  '[`flextable`](https://search.r-project.org/CRAN/refmans/flextable/html/flextable.html)', 'Flexible tables',
-  '[`regex`](https://search.r-project.org/R/refmans/base/html/regex.html)', '[Regular expression](https://en.wikipedia.org/wiki/Regular_expression)',
-  '`S3`, `generic`, [`methods`](https://search.r-project.org/R/refmans/utils/html/methods.html)', '`S3` object oriented system, [`UseMethod`](https://search.r-project.org/R/refmans/base/html/UseMethod.html); [`getS3method`](https://search.r-project.org/R/refmans/utils/html/getS3method.html); <https://adv-r.hadley.nz/s3.html>',  
-  '`S4`, `generic`, `methods`', '`S4` object oriented system, [`isS4`](https://search.r-project.org/R/refmans/base/html/isS4.html); [`setClass`](https://search.r-project.org/R/refmans/methods/html/setClass.html); [`getMethod`](https://search.r-project.org/R/refmans/methods/html/getMethod.html); <https://adv-r.hadley.nz/s4.html>',
-  '[`search`](https://search.r-project.org/R/refmans/base/html/search.html)', 'Search path',
-  '[`seed`](https://search.r-project.org/R/refmans/base/html/Random.html)', 'Random number generation seed'
-) |>
-  matrix(nrow = 2L, dimnames = list(c('Term / Abbreviation', 'Description'), NULL)) |>
-  t.default() |>
-  as.data.frame.matrix() |> 
-  kable() 
 ```
 
 # `aggRate`
@@ -124,6 +98,7 @@ ordinal::clm(rating ~ temp * contact, data = ordinal::wine) |>
 The `S3` dispatch `aggRate.vlm()` ...
 
 ```{r}
+#| warning: false
 VGAM::wine |>
   within.data.frame(expr = {
     bitter = cbind(bitter1, bitter2, bitter3, bitter4, bitter5) 
@@ -160,3 +135,21 @@ m |> autoplot()
 ```{r}
 !identical(m, m2) #but they are mathematically equivalent
 ```
+
+# Appendix
+
+## Terms and Abbreviations
+
+| Term / Abbreviation | Description |
+|---------------------|-------------|
+| [`|>`](https://search.r-project.org/R/refmans/base/html/pipeOp.html) | Forward pipe operator introduced in `R` 4.1.0 | 
+| `$` | [Extract](https://search.r-project.org/R/refmans/base/html/Extract.html) parts of an object |
+| [`aggregate`](https://search.r-project.org/R/refmans/stats/html/aggregate.html) | Aggregated statistics | 
+| `CRAN`, `R` | [The Comprehensive R Archive Network](https://cran.r-project.org) |
+| [`class`](https://search.r-project.org/R/refmans/base/html/class.html) | Object class |
+| [`flextable`](https://search.r-project.org/CRAN/refmans/flextable/html/flextable.html) | Flexible tables |
+| [`regex`](https://search.r-project.org/R/refmans/base/html/regex.html) | [Regular expression](https://en.wikipedia.org/wiki/Regular_expression) |
+| `S3`, `generic`, [`methods`](https://search.r-project.org/R/refmans/utils/html/methods.html) | `S3` object oriented system, [`UseMethod`](https://search.r-project.org/R/refmans/base/html/UseMethod.html); [`getS3method`](https://search.r-project.org/R/refmans/utils/html/getS3method.html); <https://adv-r.hadley.nz/s3.html> |  
+| `S4`, `generic`, `methods` | `S4` object oriented system, [`isS4`](https://search.r-project.org/R/refmans/base/html/isS4.html); [`setClass`](https://search.r-project.org/R/refmans/methods/html/setClass.html); [`getMethod`](https://search.r-project.org/R/refmans/methods/html/getMethod.html); <https://adv-r.hadley.nz/s4.html> |
+| [`search`](https://search.r-project.org/R/refmans/base/html/search.html) | Search path |
+| [`seed`](https://search.r-project.org/R/refmans/base/html/Random.html) | Random number generation seed'
